[tool.poetry]
name = "repl_python3_owl-spammer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"
pypresence = "^4.2.0"
aiohttp = "^3.7.4"
colorama = "^0.4.4"
tasksio = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
